--- a/index.ipynb
+++ b/index.ipynb
@@ -53,10 +53,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "1b78d567",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "![demo](assets/screen_recording_0.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2ceb7ea",
+   "metadata": {},
    "source": []
   }
  ],
@@ -67,7 +74,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.1"
   }
  },
