Implement code changes to enhance functionality and improve performance

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -57,7 +57,7 @@
    "id": "1b78d567",
    "metadata": {},
    "source": [
-    "![demo](screen_recording_0.gif)"
+    "![demo](resources/screen_recording_0.gif)"
    ]
   },
   {
