feat: Add code snippets for telemetry data retrieval and visualization in Jupyter notebook

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -45,7 +45,13 @@
    "source": [
     "## Telemetry data\n",
     "\n",
-    "The first thing was to get telemetry data. For this I used the fastf1 python library, which makes it simple to download telemetry data. First thing is to load a session, where only the year, event name and the session type need to be specified. "
+    "The first thing was to get telemetry data. For this I used the fastf1 python library, which makes it simple to download telemetry data. First thing is to load a session, where only the year, event name and the session type need to be specified. \n",
+    "\n",
+    "```python\n",
+    "\n",
+    "session = fastf1.get_session(2022, \"Monaco Grand Prix\", \"Qualifying\")\n",
+    "session.load()\n",
+    "```"
    ]
   },
   {
@@ -71,7 +77,15 @@
    "source": [
     "After loading the session we can use all available data like lap times, results, telemetry data, etc.\n",
     "\n",
-    "The session object than can be used to retrieve telemetry data for specific drivers and laps.\n"
+    "The session object than can be used to retrieve telemetry data for specific drivers and laps.\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "fastest_lap = session.laps.pick_drivers(\"VER\").pick_fastest()\n",
+    "# add distance to the data\n",
+    "telemetry_data = fastest_lap.get_car_data().add_distance()\n",
+    "telemetry_data.head(2)\n",
+    "```\n"
    ]
   },
   {
@@ -185,7 +199,14 @@
     "## Colors\n",
     "\n",
     "Another not that crucial but for me important detail was to be able to plot the data with the colors of the corresponding team color of the given driver. \n",
-    "This information can be found with the fastf1 library too."
+    "This information can be found with the fastf1 library too.\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "driver = session.get_driver(\"VER\")\n",
+    "team = driver[\"TeamName\"]\n",
+    "color = fastf1.plotting.get_team_color(team, session=session)\n",
+    "```"
    ]
   },
   {
@@ -226,7 +247,14 @@
    "id": "aba5c906",
    "metadata": {},
    "source": [
-    "Another detail is that the color in case of comparing a driver with another driver from the same team. In this case one of the drivers color will be inverted. This can be achived by the following code:\n"
+    "Another detail is that the color in case of comparing a driver with another driver from the same team. In this case one of the drivers color will be inverted. This can be achived by the following code:\n",
+    "\n",
+    "```python\n",
+    "def _invert_hex_color(hex_color: str) -> str:\n",
+    "    hex_color = hex_color.lstrip(\"#\")\n",
+    "    inverted = \"\".join(f\"{255 - int(hex_color[i:i+2], 16):02X}\" for i in (0, 2, 4))\n",
+    "    return f\"#{inverted}\"\n",
+    "```"
    ]
   },
   {
