adding a thegifs in different cells

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -436,12 +436,24 @@
     "\n",
     "1. Asking for implicit information position:\n",
     "\n",
-    "![implicit_position](resources/screen_recording_0.gif)\n",
-    "\n",
+    "![implicit_position](resources/screen_recording_0.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bb8f15d",
+   "metadata": {},
+   "source": [
     "2. Asking for explicit information:\n",
     "\n",
-    "![most_recent_event](resources/screen_recording_1.gif)\n",
-    "\n",
+    "![most_recent_event](resources/screen_recording_1.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f223b95d",
+   "metadata": {},
+   "source": [
     "3. Asking for most recent event:\n",
     "   \n",
     "![explicit_information](resources/screen_recording_2.gif)"
@@ -458,7 +470,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "I built a very simple streamlit app where the user can enter a prompt for getting telemetry data from two F1 drivers. I learned a dozen of things, such as how to use LangChain with OpenAI, how to build custom tools, the basic concepts how to build LLM based applications"
+    "I built a very simple streamlit app where the user can enter a prompt for getting telemetry data from two F1 drivers. I learned a dozen of things, such as how to use LangChain with OpenAI, how to build custom tools, the basic concepts how to build LLM based applicationsa"
    ]
   },
   {
